<resources>
    <string name="app_name">FoodyApp</string>
    <string name="version">Phiên bản</string>
    <string name="load">Đang tải ...</string>
    <string name="companyname">lucthao.hutech</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="or"> Hoặc </string>
    <string name="facebook_app_id">c960a4298a4ff4ece83d28cbabe2549b</string>
    <string name="loginFB">"Đăng nhập bằng Facebook</string>
    <string name="loginGG">"Đăng nhập bằng Google</string>
    <string name="forgotpass">Quên mật khẩu ?</string>
    <string name="signup"><u>Đăng ký</u></string>
    <string name="re.enterpass">Nhập lại mật khẩu</string>
    <string name="error">Bạn chưa nhập </string>
    <string name="notifyerror">Vui lòng nhập giống mật khẩu như trên</string>
    <string name="notifysign_up">Tạo tài khoản thành công</string>
    <string name="processing">Đang xử lý</string>
    <string name="notifyloginerror">Tài khoản không hợp lệ. Vui lòng kiểm tra lại !</string>
    <string name="resetpass">Khôi phục mật khẩu</string>
    <string name="chuoiyeucau">Vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="sendmail">Gửi mail</string>
    <string name="uarenotmember">Bạn không phải là thành viên ?</string>
    <string name="notifyemailerror">Email không hợp lệ !</string>
    <string name="notify_sendmailsuccessful">Gửi email thành công !</string>
    <string name="loginsuccesful">Đăng nhập thành công</string>
    <string name="address">Ở đâu ?</string>
    <string name="food">Ăn gì ?</string>
    <string name="latest">Mới nhất</string>
    <string name="category">Danh mục</string>
    <string name="area">HCM</string>
    <string name="nearby">Gần tôi</string>
    <string name="order_delivery">Giao hàng</string>
    <string name="review">Review</string>
    <string name="gameandfun">Game and Fun</string>
    <string name="blogs">Bài viết</string>
    <string name="top_member">Top thành viên</string>
    <string name="order">Đặt món</string>
    <string name="load_img">Tải ảnh</string>
    <string name="comment">Bình luận</string>
    <string name="checkin">Check-in</string>
    <string name="save">Lưu lại</string>
    <string name="share">Chia sẻ</string>
</resources>
