<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resetpass"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chuoiyeucau"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background" />

            <EditText
                android:id="@+id/edtResetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="#20c196"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/sendmail"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uarenotmember"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/txtSignUp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signup"
                    android:textAlignment="textEnd"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>