<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/foodytext" />

            <EditText
                android:id="@+id/edtSign_upEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/edtSign_upPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/edtRe_enterPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/re.enterpass"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/btnSign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="#20c196"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/signup"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>